Revert "fix: Rimuovi l'animazione static-flicker dai file CSS delle schermate di valutazione, risultati e tutorial"
This reverts commit 24acc0b6980b96eeb82dfecf514e476dcf74c180.

--- a/web/src/screens/InfiniteDilemmasScreen.css
+++ b/web/src/screens/InfiniteDilemmasScreen.css
@@ -3,6 +3,7 @@
   width: 100%;
   padding: 40px 20px;
   position: relative;
+  animation: static-flicker 0.5s infinite;
 }
 
 .infinite-go-back-button {
